<resources>

    <!-- App wide-->
    <string name="app_name">InitiativeTracker</string>

    <!-- SplashActivity-->
    <string name="splash_title">Initiative\nTracker</string>
    <string name="splash_site">More apps at\nwww.rekijan.nl</string>

    <!-- MainActivity-->
    <string name="title_activity_main">Initiative Tracker</string>

    <!-- Menu-->
    <string name="action_next_turn">Next turn</string>
    <string name="action_sort">Sort</string>
    <string name="action_party_select">Select a party</string>
    <string name="action_add_character">Add a character</string>
    <string name="action_delete_character">Delete a character</string>
    <string name="action_set_pcs_max_hp">Set PCs at max hp</string>
    <string name="action_about">About</string>
    <string name="action_tip">Tip the dev</string>

    <string name="toast_max_hp">The following PCs did not get updated because their max hp was not higher then their current hp.\n\u0020\n%1$s</string>

    <!-- Character Cards-->
    <string name="char_card_initiative">Init</string>
    <string name="char_card_hp">HP</string>
    <string name="char_card_buffs">Buffs or</string>
    <string name="char_card_debuffs">(De)buffs:</string>
    <string name="char_card_show_more">Show\nMore</string>

    <!--Debuff Cards-->
    <string name="debuff_card_name">(De)buff name</string>
    <string name="debuff_card_duration">10</string>
    <string name="debuff_card_duration_label">Duration</string>
    <string name="debuff_card_description">(De)buff description</string>
    <string name="debuff_card_remove_button">Remove</string>

    <!--Character detail fragment-->
    <string name="char_detail_switch_pc_on">Character is a  PC</string>
    <string name="char_detail_initiative_bonus">Initiative bonus</string>
    <string name="char_detail_max_hp">Max hp</string>
    <string name="char_detail_fast_healing">Fast Healing</string>
    <string name="char_detail_regeneration">Regeneration</string>
    <string name="char_detail_skills">Skills</string>
    <string name="char_detail_attack_routine">Attack routine</string>
    <string name="char_detail_attack_routine_hint">to hit/damage</string>
    <string name="char_detail_ac">AC touch AC ff AC</string>
    <string name="char_detail_maneuvers">Maneuvers</string>
    <string name="char_detail_saves">Fort Ref Will</string>
    <string name="char_detail_notes">Notes</string>
    <string name="char_detail_debuffs">Debuffs, buffs, spells</string>
    <string name="char_detail_add_button">Add</string>
    <string name="char_detail_clear_button">Clear all</string>

    <!-- Edit Order fragment -->
    <string name="up_button_label">Λ</string>
    <string name="down_button_label">v</string>
    <string name="edit_order_instruction">Press and hold a character to set it to be the one first in the round.</string>

    <!-- EditText Hints-->
    <string name="EH_character_name">Character name</string>
    <string name="EH_character_notes">Notes</string>

    <!--Toast debuffs-->
    <string name="debuff_expired">Debuff %s expired</string>
    <string name="debuff_top_left">top left</string>
    <string name="debuff_middle_top">middle top</string>
    <string name="debuff_top_right">top right</string>
    <string name="debuff_bottom_left">bottom left</string>
    <string name="debuff_middle_bottom">middle bottom</string>
    <string name="debuff_bottom_right">bottom right</string>


    <!--Dialog-->
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_delete">Are you sure you want to delete\u0020</string>
    <string name="empty_character_name">this character</string>
    <string name="dialog_delete_title">Warning: Confirm delete</string>
    <string name="dialog_delete_info">To delete a character press down on it, and hold until a confirmation dialog appears.</string>
    <string name="dialog_delete_info_title">How to delete a character</string>
    <string name="dialog_about_info">To learn more about the app, and its developer, please visit the website.</string>
    <string name="dialog_about_info_title">About</string>
    <string name="dialog_about_ok">Go to website</string>
    <string name="error_no_such_value">The following value was not found:\u0020</string>
    <string name="dialog_reset_round_counter_title">Reset round counter?</string>
    <string name="dialog_reset_round_counter">Confirming will reset the round counter to 1.</string>
    <string name="dialog_reset_round_double_init">\n\nWARNING\n\nSome characters have the same initiative, you might want to edit the order and resolve this.\nPlease note this will not change who is first in the round for tracking turns (You will need to change numbers and sort again to do that).</string>
    <string name="dialog_reset_round_counter_cancel">No, keep current number</string>

    <!-- Dialog debuff expired -->
    <string name="dialog_debuff_expired_title">Debuff expired</string>
    <string name="dialog_debuff_remove">Remove (after this turn)</string>
    <string name="dialog_debuff_keep">Keep anyway</string>

    <!--Dialog Hp-->
    <string name="hp_dialog_title">Adjust hp value</string>
    <string name="hp_dialog_old_value">Old value:\u0020</string>
    <string name="hp_dialog_input">Input</string>
    <string name="hp_dialog_preview">Preview values</string>
    <string name="hp_dialog_add_btn">Add</string>
    <string name="hp_dialog_set_btn">Set</string>
    <string name="hp_dialog_subtract_btn">Subtract</string>

    <!--Dialog low hp-->
    <string name="dialog_delete_low_title">Delete this character?</string>
    <string name="dialog_delete_low">This character is below 0 hp, do you want to remove it from the list?</string>
    <string name="dialog_delete_low_positive">OK, delete</string>
    <string name="dialog_delete_low_negative">NO, keep character</string>

    <!--Round counter-->
    <string name="plus_round_button_label">+</string>
    <string name="minus_round_button_label">-</string>
    <string name="reset_round_button_label">Reset</string>
    <string name="edit_order_button_label">Edit\norder</string>

    <!--Character details-->
    <string name="character_details_name_title">Character details for :\u0020 %1$s</string>
    <string name="standard_ac">AC %1$d (touch %1$d, flatfooted %1$d)</string>
    <string name="standard_saves">Fort %1$d Ref %1$d Will %1$d</string>
    <string name="standard_mobile_ac">AC %1$d (touch %1$d, \n flatfooted %1$d)</string>
    <string name="standard__mobile_saves">Fort %1$d Ref %1$d \n Will %1$d</string>
    <string name="maneuvers">CMB +%1$d CMD %2$d</string>

    <!--Tip dialog    -->
    <string name="tip_dialog_title">Tip the developer</string>
    <string name="tip_dialog_select">Select your amount\n \nAmount is before taxes, total price in your currency is displayed next to it.</string>
    <string name="tip_dialog_five">€5,-</string>
    <string name="tip_dialog_ten">€10,-</string>

    <!-- Automatic healing dialog -->
    <string name="auto_healing_dialog_fast_healing_title">Fast Healing detected</string>
    <string name="auto_healing_dialog_fast_healing_message">This character has fast healing, do you wish to add it to the hp total?</string>
    <string name="auto_healing_dialog_regeneration_title">Regeneration detected</string>
    <string name="auto_healing_dialog_regeneration_message">This character has regeneration, do you wish to add it to the hp total?</string>
    <string name="auto_healing_dialog_max_exceeded_title">Max Hp Exceeded</string>
    <string name="auto_healing_dialog_max_exceeded_message">Looks like the automatic healing exceeded the max hp value for this creature, do you want to reset it to its max hp?</string>

</resources>
