<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/debuff_cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginTop="2dp"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    android:layout_marginBottom="2dp"
    card_view:cardUseCompatPadding="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/debuff_name_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/debuff_card_name"
            android:imeOptions="actionDone"
            android:inputType="textPersonName|textCapWords"
            card_view:layout_constraintEnd_toStartOf="@+id/duration_textView"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/debuff_duration_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:hint="@string/debuff_card_duration"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:selectAllOnFocus="true"
            card_view:layout_constraintEnd_toEndOf="@+id/duration_textView"
            card_view:layout_constraintStart_toStartOf="@+id/duration_textView"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/duration_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/debuff_card_duration_label"
            android:textAllCaps="true"
            card_view:layout_constraintEnd_toStartOf="@+id/remove_debuff_button"
            card_view:layout_constraintTop_toBottomOf="@+id/debuff_duration_editText" />

        <Button
            android:id="@+id/remove_debuff_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/debuff_card_remove_button"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/debuff_description_editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/debuff_card_description"
            card_view:layout_constraintEnd_toStartOf="@+id/remove_debuff_button"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/duration_textView" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
