<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_order_cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginTop="2dp"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    android:layout_marginBottom="2dp"
    card_view:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/up_edit_order_button"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/up_button_label"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/initiative_textView"
            android:layout_width="66dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/char_card_initiative"
            android:textAllCaps="true"
            card_view:layout_constraintStart_toEndOf="@+id/up_edit_order_button"
            card_view:layout_constraintTop_toBottomOf="@+id/edit_order_initiative_textView" />

        <TextView
            android:id="@+id/edit_order_initiative_textView"
            android:layout_width="66dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:selectAllOnFocus="true"
            android:text="16"
            card_view:layout_constraintEnd_toEndOf="@+id/initiative_textView"
            card_view:layout_constraintStart_toStartOf="@+id/initiative_textView"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/edit_order_name_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/EH_character_name"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/down_edit_order_button"
            card_view:layout_constraintStart_toEndOf="@+id/initiative_textView"
            card_view:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/down_edit_order_button"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/down_button_label"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
